// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RevealBurst hero renders default snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "padding": 16,
      },
      {
        "height": 320,
        "width": 320,
      },
    ]
  }
>
  <Svg
    height={320}
    viewBox="0 0 320 320"
    width={320}
  >
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-0"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-1"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-2"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-3"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-4"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-5"
    />
  </Svg>
  <View
    pointerEvents="none"
    style={
      {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#ECFDF5",
            "justifyContent": "center",
            "shadowColor": "#10B981",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.18,
            "shadowRadius": 12,
          },
          {
            "borderRadius": 56,
            "height": 112,
            "width": 112,
          },
          {
            "transform": [
              {
                "scale": 0,
              },
            ],
          },
        ]
      }
      testID="reveal-burst-badge"
    >
      <Image
        accessibilityElementsHidden={true}
        fadeDuration={0}
        importantForAccessibility="no-hide-descendants"
        resizeMode="contain"
        source={
          {
            "default": 0,
          }
        }
        style={
          {
            "height": 56,
            "width": 56,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`RevealBurst hero renders with custom particle count 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "padding": 16,
      },
      {
        "height": 320,
        "width": 320,
      },
    ]
  }
>
  <Svg
    height={320}
    viewBox="0 0 320 320"
    width={320}
  >
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-0"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-1"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-2"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-3"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-4"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-5"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-6"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-7"
    />
  </Svg>
  <View
    pointerEvents="none"
    style={
      {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#ECFDF5",
            "justifyContent": "center",
            "shadowColor": "#10B981",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.18,
            "shadowRadius": 12,
          },
          {
            "borderRadius": 56,
            "height": 112,
            "width": 112,
          },
          {
            "transform": [
              {
                "scale": 0,
              },
            ],
          },
        ]
      }
      testID="reveal-burst-badge"
    >
      <Image
        accessibilityElementsHidden={true}
        fadeDuration={0}
        importantForAccessibility="no-hide-descendants"
        resizeMode="contain"
        source={
          {
            "default": 0,
          }
        }
        style={
          {
            "height": 56,
            "width": 56,
          }
        }
      />
    </View>
  </View>
</View>
`;
